fix: address web access review findings